fix(swaync): fixed icons spacing

--- a/files/configs/swaync/style.css
+++ b/files/configs/swaync/style.css
@@ -21,9 +21,7 @@ slider {
 }
 
 .floating-notifications.background .notification-row .notification-background {
-  box-shadow:
-    0 0 8px 0 rgba(0, 0, 0, 0.8),
-    inset 0 0 0 1px #363a4f;
+  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.8), inset 0 0 0 1px #363a4f;
   border-radius: 12.6px;
   margin: 18px;
   background-color: #24273a;
@@ -31,72 +29,36 @@ slider {
   padding: 0;
 }
 
-.floating-notifications.background
-  .notification-row
-  .notification-background
-  .notification {
+.floating-notifications.background .notification-row .notification-background .notification {
   padding: 7px;
   border-radius: 12.6px;
 }
 
-.floating-notifications.background
-  .notification-row
-  .notification-background
-  .notification.critical {
+.floating-notifications.background .notification-row .notification-background .notification.critical {
   box-shadow: inset 0 0 7px 0 #ed8796;
 }
 
-.floating-notifications.background
-  .notification-row
-  .notification-background
-  .notification
-  .notification-content {
+.floating-notifications.background .notification-row .notification-background .notification .notification-content {
   margin: 7px;
 }
 
-.floating-notifications.background
-  .notification-row
-  .notification-background
-  .notification
-  .notification-content
-  .summary {
+.floating-notifications.background .notification-row .notification-background .notification .notification-content .summary {
   color: #cad3f5;
 }
 
-.floating-notifications.background
-  .notification-row
-  .notification-background
-  .notification
-  .notification-content
-  .time {
+.floating-notifications.background .notification-row .notification-background .notification .notification-content .time {
   color: #a5adcb;
 }
 
-.floating-notifications.background
-  .notification-row
-  .notification-background
-  .notification
-  .notification-content
-  .body {
+.floating-notifications.background .notification-row .notification-background .notification .notification-content .body {
   color: #cad3f5;
 }
 
-.floating-notifications.background
-  .notification-row
-  .notification-background
-  .notification
-  > *:last-child
-  > * {
+.floating-notifications.background .notification-row .notification-background .notification > *:last-child > * {
   min-height: 3.4em;
 }
 
-.floating-notifications.background
-  .notification-row
-  .notification-background
-  .notification
-  > *:last-child
-  > *
-  .notification-action {
+.floating-notifications.background .notification-row .notification-background .notification > *:last-child > * .notification-action {
   border-radius: 7px;
   color: #cad3f5;
   background-color: #363a4f;
@@ -104,34 +66,19 @@ slider {
   margin: 7px;
 }
 
-.floating-notifications.background
-  .notification-row
-  .notification-background
-  .notification
-  > *:last-child
-  > *
-  .notification-action:hover {
+.floating-notifications.background .notification-row .notification-background .notification > *:last-child > * .notification-action:hover {
   box-shadow: inset 0 0 0 1px #494d64;
   background-color: #363a4f;
   color: #cad3f5;
 }
 
-.floating-notifications.background
-  .notification-row
-  .notification-background
-  .notification
-  > *:last-child
-  > *
-  .notification-action:active {
+.floating-notifications.background .notification-row .notification-background .notification > *:last-child > * .notification-action:active {
   box-shadow: inset 0 0 0 1px #494d64;
   background-color: #7dc4e4;
   color: #cad3f5;
 }
 
-.floating-notifications.background
-  .notification-row
-  .notification-background
-  .close-button {
+.floating-notifications.background .notification-row .notification-background .close-button {
   margin: 7px;
   padding: 2px;
   border-radius: 6.3px;
@@ -139,26 +86,18 @@ slider {
   background-color: #ed8796;
 }
 
-.floating-notifications.background
-  .notification-row
-  .notification-background
-  .close-button:hover {
+.floating-notifications.background .notification-row .notification-background .close-button:hover {
   background-color: #ee99a0;
   color: #24273a;
 }
 
-.floating-notifications.background
-  .notification-row
-  .notification-background
-  .close-button:active {
+.floating-notifications.background .notification-row .notification-background .close-button:active {
   background-color: #ed8796;
   color: #24273a;
 }
 
 .control-center {
-  box-shadow:
-    0 0 8px 0 rgba(0, 0, 0, 0.8),
-    inset 0 0 0 1px #363a4f;
+  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.8), inset 0 0 0 1px #363a4f;
   border-radius: 12.6px;
   margin: 18px;
   background-color: #24273a;
@@ -204,64 +143,31 @@ slider {
   border-radius: 7px;
 }
 
-.control-center
-  .notification-row
-  .notification-background
-  .notification.critical {
+.control-center .notification-row .notification-background .notification.critical {
   box-shadow: inset 0 0 7px 0 #ed8796;
 }
 
-.control-center
-  .notification-row
-  .notification-background
-  .notification
-  .notification-content {
+.control-center .notification-row .notification-background .notification .notification-content {
   margin: 7px;
 }
 
-.control-center
-  .notification-row
-  .notification-background
-  .notification
-  .notification-content
-  .summary {
+.control-center .notification-row .notification-background .notification .notification-content .summary {
   color: #cad3f5;
 }
 
-.control-center
-  .notification-row
-  .notification-background
-  .notification
-  .notification-content
-  .time {
+.control-center .notification-row .notification-background .notification .notification-content .time {
   color: #a5adcb;
 }
 
-.control-center
-  .notification-row
-  .notification-background
-  .notification
-  .notification-content
-  .body {
+.control-center .notification-row .notification-background .notification .notification-content .body {
   color: #cad3f5;
 }
 
-.control-center
-  .notification-row
-  .notification-background
-  .notification
-  > *:last-child
-  > * {
+.control-center .notification-row .notification-background .notification > *:last-child > * {
   min-height: 3.4em;
 }
 
-.control-center
-  .notification-row
-  .notification-background
-  .notification
-  > *:last-child
-  > *
-  .notification-action {
+.control-center .notification-row .notification-background .notification > *:last-child > * .notification-action {
   border-radius: 7px;
   color: #cad3f5;
   background-color: #181926;
@@ -269,25 +175,13 @@ slider {
   margin: 7px;
 }
 
-.control-center
-  .notification-row
-  .notification-background
-  .notification
-  > *:last-child
-  > *
-  .notification-action:hover {
+.control-center .notification-row .notification-background .notification > *:last-child > * .notification-action:hover {
   box-shadow: inset 0 0 0 1px #494d64;
   background-color: #363a4f;
   color: #cad3f5;
 }
 
-.control-center
-  .notification-row
-  .notification-background
-  .notification
-  > *:last-child
-  > *
-  .notification-action:active {
+.control-center .notification-row .notification-background .notification > *:last-child > * .notification-action:active {
   box-shadow: inset 0 0 0 1px #494d64;
   background-color: #7dc4e4;
   color: #cad3f5;
@@ -310,10 +204,7 @@ slider {
   color: #24273a;
 }
 
-.control-center
-  .notification-row
-  .notification-background
-  .close-button:active {
+.control-center .notification-row .notification-background .close-button:active {
   background-color: #ed8796;
   color: #24273a;
 }
@@ -448,4 +339,8 @@ slider {
 
 .widget-backlight .KB {
   padding-bottom: 1rem;
+}
+
+.image {
+  padding-right: 0.5rem;
 }
